<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonFullScreenActivity"
        android:text="@string/full_screen_form" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonPartialScreenActivity"
        android:text="@string/partial_screen_form" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonFormListenerActivity"
        android:text="@string/form_with_listener" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonFormListenerJavaActivity"
        android:text="@string/form_with_listener_java" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonTabbedFormActivity"
        android:text="@string/tabbed_form" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonLoginActivity"
        android:text="@string/sample_login_form" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonCustomFormActivity"
        android:text="@string/custom_form" />

</LinearLayout>